force-app/main/default/objects/FinancialAccountAccess__c/FinancialAccountAccess__c.object-meta.xml
<CustomObject>
    <description>Tracks special access grants for financial accounts, particularly for employee account overrides</description>
    <label>Financial Account Access</label>
    <nameField>
        <displayFormat>FAA-{0000}</displayFormat>
        <label>Financial Account Access Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Account Accesses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>