force-app/main/default/objects/FinancialAccountAccess__c/fields/AccessType__c.field-meta.xml
<CustomField>
    <fullName>AccessType__c</fullName>
    <description>Type of special access being granted</description>
    <inlineHelpText>The type of special access being granted to the user for this financial account</inlineHelpText>
    <label>Access Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Override</fullName>
                <default>true</default>
                <label>Override</label>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>