force-app/main/default/objects/FinancialAccountAccess__c/fields/FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The financial account that is being granted special access</description>
    <inlineHelpText>The financial account that the user is being granted special access to</inlineHelpText>
    <label>Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipName>FinancialAccountAccesses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>