force-app/main/default/objects/FinancialAccountAccess__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user receiving special access to the financial account</description>
    <inlineHelpText>The user who is being granted special access to the financial account</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FinancialAccountAccesses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>